--- a/.github/workflows/master_fa-bot.yml
+++ b/.github/workflows/master_fa-bot.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libmagic1
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
@@ -78,4 +83,3 @@ jobs:
         with:
           app-name: 'fa-bot'
           slot-name: 'Production'
-          
