--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-langchain>=0.1.9
-langchain-community>=0.0.24
-langchain-core>=0.1.27
-langchain-openai>=0.0.7
+langchain==0.1.9
+langchain-community==0.0.24
+langchain-core==0.1.27
+langchain-openai==0.0.7
 python-dotenv>=1.0.1
 streamlit>=1.31.0
 pypdf2==3.0.1
@@ -11,7 +11,7 @@ Pillow>=10.2.0
 pytesseract==0.3.10
 chromadb==0.4.18
 sentence-transformers==2.2.2
-openai==1.3.0
+openai>=1.10.0,<2.0.0
 python-magic>=0.4.27
 tiktoken==0.5.1
 faiss-cpu>=1.7.4
