--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ chromadb==0.4.18
 sentence-transformers==2.2.2
 openai>=1.10.0,<2.0.0
 python-magic>=0.4.27
-tiktoken==0.5.1
+tiktoken>=0.5.2,<1.0.0
 faiss-cpu>=1.7.4
 unstructured>=0.12.3
 pdf2image>=1.17.0
